# commune-subnet-template

./: .envrc  .gitignore  Dockerfile  README.md  TODO.md  flake.nix  pyproject.toml  requirements.txt
src/mysubnet/: cli.py
src/mysubnet/validator/: validator.py
src/subnet/miner/: model.py
src/subnet/validator/: _config.py  validator.py
