[tool.poetry]
name = "mysubnet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

communex = "^0.1.34.5"
uvicorn = "^0.29.0"
keylimiter = "^0.1.5"
pydantic-settings = "^2.6.0"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
